フロントの実装

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,1 +1,11 @@
-<h1>メッセージindex</h1>
+<div class="wrapper">
+  <div class="side-bar">
+    <%= render "menu" %>
+  </div>
+  <div class="center-bar">
+    <%= render "center" %>
+  </div>
+  <div class="chat">
+    <%= render "chat" %>
+  </div>
+</div>
