--- a/app/views/messages/_chat.html.erb
+++ b/app/views/messages/_chat.html.erb
@@ -1,7 +1,11 @@
 <div class="chat-header">
-  <div class="room-name">
-    令和3年度3年２組
-  </div>
+  <% current_user.rooms.each do |room| %>
+    <div class="room">
+      <div class="room-name">
+        <%= room.name %>
+      </div>
+    </div>
+  <% end %>
 </div>
 <div class="messages">
   <div class="message">
