--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -7,7 +7,7 @@
       <%= render "center" %>
     </div>
     <div class="chat">
-      <%= render "chat" %>
+      <%= render "messages/chat" %>
     </div>
   <% end %>
 </div>
