--- a/app/views/messages/_center.html.erb
+++ b/app/views/messages/_center.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div class="room-create">
       <%# userが先生の時だけ表示する %>
-        <% if current_user.status == 2 %>
+        <% if current_user.status != 3%>
           <%= link_to "ルームの作成", new_room_path %>
         <% end %>
       </div>
