--- a/app/views/messages/_center.html.erb
+++ b/app/views/messages/_center.html.erb
@@ -22,7 +22,7 @@
     <div class="member-list">
       <% current_user.rooms.each do |room| %>
         <div class="user-name">
-          <a href="#"><%= room.name %></a>
+          <%= link_to room.name, room_messages_path(room) %>
         </div>
       <% end %>
     </div>
