--- a/app/views/messages/_chat.html.erb
+++ b/app/views/messages/_chat.html.erb
@@ -1,9 +1,9 @@
 <div class="chat-header">
     <div class="room">
       <div class="room-name">
-        <%= current_user.rooms.name %>
+        <%= @room.name %>
       </div>
-    </div>
+    </div> 
 </div>
 <div class="messages">
   <div class="message">
@@ -26,3 +26,13 @@
     </div>
   </div>
 </div>
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <%= f.file_field :image, class: 'hidden' %>
+    </label>
+  </div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
