--- a/app/views/messages/_chat.html.erb
+++ b/app/views/messages/_chat.html.erb
@@ -6,25 +6,7 @@
     </div> 
 </div>
 <div class="messages">
-  <div class="message">
-    <div class="upper-message">
-      <div class="messenger">
-        菅原達也
-      </div>
-      <div class="send-time">
-        2021/01/15(Fri) 18:31:23
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        明日の一時間目の算数について<br>
-        数学担当の森山先生から連絡があり明日の算数では三角定規を使うので
-        用意して欲しい。とのことでした。<br>
-        急な連絡になってしまい申し訳ございません。
-        よろしくお願いいたします。
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'messages', collection: @messages %>
 </div>
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
