--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -4,7 +4,7 @@
         <%= messages.user.name %>
       </div>
       <div class="send-time">
-        <%= messages.created_at%>
+        <%= l messages.created_at%>
       </div>
     </div>
     <div class="lower-message">
