画像表示の実装

--- a/app/views/messages/_chat.html.erb
+++ b/app/views/messages/_chat.html.erb
@@ -6,7 +6,7 @@
     </div> 
 </div>
 <div class="messages">
-  <%= render partial: 'messages', collection: @messages %>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
