--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,15 +1,16 @@
 <div class="message">
     <div class="upper-message">
       <div class="messenger">
-        <%= messages.user.name %>
+        <%= message.user.name %>
       </div>
       <div class="send-time">
-        <%= l messages.created_at%>
+        <%= l message.created_at%>
       </div>
     </div>
     <div class="lower-message">
       <div class="message-content">
-       <%= messages.content %>
+       <%= message.content %>
       </div>
+      <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
     </div>
   </div>
