--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,16 +1,16 @@
 <div class="message">
-    <div class="upper-message">
-      <div class="messenger">
-        <%= message.user.name %>
+     <div class="upper-message">
+      <div class="messenger"> 
+         <%= message.user.name %> 
       </div>
-      <div class="send-time">
-        <%= l message.created_at%>
-      </div>
-    </div>
+       <%# <div class="send-time">  %>
+        <%# <%= message.created_at%> 
+       <%# </div>  %>
+     </div> 
     <div class="lower-message">
       <div class="message-content">
        <%= message.content %>
       </div>
-      <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>
+      <%# <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %> 
     </div>
   </div>
