--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,11 +1,11 @@
-<div class="message">
+<div class="message" id="message">
      <div class="upper-message">
       <div class="messenger"> 
          <%= message.user.name %> 
       </div>
-       <%# <div class="send-time">  %>
-        <%# <%= message.created_at%> 
-       <%# </div>  %>
+      <div class="send-time">  
+         <%=l message.created_at%> 
+      </div>  
      </div> 
     <div class="lower-message">
       <div class="message-content">
