--- a/app/views/messages/_menu.html.erb
+++ b/app/views/messages/_menu.html.erb
@@ -12,6 +12,9 @@
       <%= link_to '目安箱', new_opinion_path%>
     </div>
     <div class="menu-name">
+      <%= link_to '目安箱の中身', opinions_path%>
+    </div>
+    <div class="menu-name">
       <a href="#">カレンダー</a>
     </div>
     <div class="menu-name">
