--- a/app/assets/stylesheets/opinion.css
+++ b/app/assets/stylesheets/opinion.css
@@ -4,7 +4,7 @@
 }
 .opinion-header {
   width: 100%;
-  height: 50px;
+  height: 100px;
   border-bottom: 1px solid #ddd;
 }
 .opinion-header h2 {
@@ -13,6 +13,15 @@
   padding-left: 630px;
   font-size: 20px;
   font-family: 'ヒラギノ明朝 ProN','Hiragino Mincho ProN',sans-serif;
+}
+.header-bottom {
+  height: 50px;
+  background-color: #ccffff;
+}
+.header-bottom-center {
+  height: 20px;
+  background-color: #ffff66;
+  border-bottom: 1px solid #FF82B2;
 }
 .opinion-box {
   width: 600px;
