--- a/app/views/opinions/new.html.erb
+++ b/app/views/opinions/new.html.erb
@@ -4,6 +4,9 @@
       <%= link_to image_tag("top_page.png", class:"create-image"), root_path%>
     </div>
     <h2>ご意見ボックス</h2>
+    <div class="header-bottom">
+      <div class="header-bottom-center"></div>
+    </div>
   </div>
   <%= form_with model: @opinion, local: true do |f| %>
     <div class='opinion-box'>
