--- a/app/views/opinions/show.html.erb
+++ b/app/views/opinions/show.html.erb
@@ -4,6 +4,9 @@
       <%= link_to image_tag("top_page.png", class:"create-image"), root_path%>
     </div>
     <h2><%= @opinion.subject %></h2>
+    <div class="header-bottom">
+      <div class="header-bottom-center"></div>
+    </div>
   </div>
   <div class="opinion-text-content">
     <%= @opinion.text%>
