Revert "Merge pull request #8 from syu-akita/意見ボックスの作成"
This reverts commit b3ab24e06299b1e461841363c36a6d813e6afbff, reversing
changes made to 0f3633de17a3e7fed7fcdad5870d0bdcf149d0b3.

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -68,7 +68,11 @@
 }
 .user-name {
   padding: 40px 0 50px;
+}
+.user-name a {
   font-size: 20px;
+  text-decoration: none;
+  color: black;
 }
 .room-create a {
   text-decoration: none;
