--- a/app/views/messages/_menu.html.erb
+++ b/app/views/messages/_menu.html.erb
@@ -9,7 +9,10 @@
   </div>
   <div class="menu-bar">
     <div class="menu-name">
-      <a href="#">ルーム一覧</a>
+      <%= link_to '目安箱', new_opinion_path%>
+    </div>
+    <div class="menu-name">
+      <%= link_to '目安箱の中身', opinions_path%>
     </div>
     <div class="menu-name">
       <a href="#">カレンダー</a>
