削除ボタンの見た目の調整

--- a/app/assets/stylesheets/opinion.css
+++ b/app/assets/stylesheets/opinion.css
@@ -103,3 +103,8 @@
   text-decoration: none;
   z-index: 10;
 }
+.opinion-destroy {
+  margin-left: 700px;
+  text-decoration: none;
+  color: red;
+}
