--- a/app/views/opinions/_opinion.html.erb
+++ b/app/views/opinions/_opinion.html.erb
@@ -2,6 +2,6 @@
   <h2>タイトル</h2>
   <%= link_to opinion.subject, opinion_path(opinion.id), class:'opinions-subject'%>
   <div class="opinion-delete">
-    <%= link_to '削除', opinion_path(opinion.id), method: :delete%>
+    <%= link_to '削除', opinion_path(opinion.id), method: :delete, class: "opinion-destroy"%>
   </div>
 </div>
