--- a/app/views/opinions/_opinion.html.erb
+++ b/app/views/opinions/_opinion.html.erb
@@ -1,7 +1,9 @@
 <div class="opinion-subject">
   <h2>タイトル</h2>
   <%= link_to opinion.subject, opinion_path(opinion.id), class:'opinions-subject'%>
-  <div class="opinion-delete">
-    <%= link_to '削除', opinion_path(opinion.id), method: :delete, class: "opinion-destroy"%>
-  </div>
+  <% if current_user.status_id == 2%>
+    <div class="opinion-delete">
+      <%= link_to '削除', opinion_path(opinion.id), method: :delete, class: "opinion-destroy"%>
+    </div>
+  <% end %>
 </div>
